@@ -1,3 +1,13 @@
+2017-12-19  Saam Barati  <sbarati@apple.com>
+
+        We forgot to do index masking for in bounds int32 arrays in the FTL
+        https://bugs.webkit.org/show_bug.cgi?id=180987
+
+        Reviewed by Keith Miller.
+
+        * ftl/FTLLowerDFGToB3.cpp:
+        (JSC::FTL::DFG::LowerDFGToB3::compileGetByVal):
+
 2017-12-19  Yusuke Suzuki  <utatane.tea@gmail.com>
 
         [DFG][FTL] NewRegexp shoud be fast
